--- a/react-task-tracker/Dockerfile
+++ b/react-task-tracker/Dockerfile
@@ -1,14 +1,7 @@
-FROM node:12 as react-build
-WORKDIR /app
-COPY . ./
-RUN npm install
-RUN npm run build
-
-# server environment
 FROM nginx:1.19.9
 COPY nginx.conf /etc/nginx/conf.d/configfile.template
 
-COPY --from=react-build /app/build /usr/share/nginx/html
+COPY ./build /app/build /usr/share/nginx/html
 
 ENV PORT 8080
 ENV HOST 0.0.0.0
