--- a/task-tracker-backend/Makefile
+++ b/task-tracker-backend/Makefile
@@ -3,6 +3,13 @@ GCLOUD_CONTAINER_URL=gcr.io
 GCLOUD_PROJ_NAME=instabase-appx
 GCLOUD_DOCKER_NAME_PREFIX=$(GCLOUD_CONTAINER_URL)/$(GCLOUD_PROJ_NAME)
 
+# Set current working directory to /workspace/task-tracker-backend if PWD is undefined
+# (PWD doesn't work on google cloud, so this is the hard-coded backup)
+CWD = $(PWD)
+ifeq ($(CWD),)
+CWD = /workspace/task-tracker-backend
+endif
+
 
 build-docker:
 	docker build . -t $(BACKEND_IMAGE_NAME)
@@ -15,10 +22,10 @@ deploy-dev:
 		--allow-unauthenticated
 
 test:
-	pytest app/tests
+	pytest $(CWD)
 
 test-docker:
-	docker run -v /workspace/task-tracker-backend:/workspace $(BACKEND_IMAGE_NAME) python -m pytest /workspace/app/tests
+	docker run -v $(CWD):/workspace $(BACKEND_IMAGE_NAME) python -m pytest /workspace/app/tests
 
 cloud-build-ci: build-docker test-docker
 	docker tag $(BACKEND_IMAGE_NAME) $(GCLOUD_DOCKER_NAME_PREFIX)/$(BACKEND_IMAGE_NAME):$(BRANCH_NAME)
