--- a/devops/ci/cloudbuild-ci.yaml
+++ b/devops/ci/cloudbuild-ci.yaml
@@ -1,5 +1,11 @@
 steps:
   - name: "gcr.io/cloud-builders/docker"
+    dir: "react-task-tracker"
+    entrypoint: "make"
+    args: ["build-docker", "test-docker", "push-docker"]
+    env:
+      - "BRANCH_NAME=$BRANCH_NAME"
+  - name: "gcr.io/cloud-builders/docker"
     dir: "task-tracker-backend"
     entrypoint: "make"
     args: ["build-docker", "test-docker", "push-docker"]
