remove second USER tag

--- a/react-task-tracker/Makefile
+++ b/react-task-tracker/Makefile
@@ -31,7 +31,7 @@ deploy-dev:
 
 
 push-docker:
-	docker tag $(WEBAPP_IMAGE_NAME):$(USER) $(GCLOUD_DOCKER_NAME_PREFIX)/$(WEBAPP_IMAGE_NAME)
+	docker tag $(WEBAPP_IMAGE_NAME) $(GCLOUD_DOCKER_NAME_PREFIX)/$(WEBAPP_IMAGE_NAME)
 	docker push $(GCLOUD_DOCKER_NAME_PREFIX)/$(WEBAPP_IMAGE_NAME)
 
 test:
