--- a/task-tracker-backend/Dockerfile
+++ b/task-tracker-backend/Dockerfile
@@ -4,7 +4,8 @@ FROM python:3.7-slim
 
 # Allow statements and log messages to immediately appear in the Knative logs
 ENV PYTHONUNBUFFERED True
-ENV PORT 3000
+ENV PORT 80
+EXPOSE 80
 # Copy local code to the container image.
 ENV APP_HOME /app
 WORKDIR $APP_HOME
