--- a/devops/cd/Makefile
+++ b/devops/cd/Makefile
@@ -1,9 +1,19 @@
 
 
+install-deps:
+	pip install jinja2-cli --user
+
+test-deployment: render-staging
+	cloud-build-local -config cloudbuild.yaml -substitutions=_ENVIRON=staging --dryrun=false .
 
 render-prod:
-	jinja2 --format=yaml --strict -o prod/rendered/cloudbuild.yaml templates/cloudbuild.yaml prod/data.json
+	python -m jinja2cli.cli --strict -o prod/deploy.sh templates/deploy.sh prod/data.json 
+
+render-staging:
+	python -m jinja2cli.cli --strict -o staging/deploy.sh templates/deploy.sh staging/data.json 
 
 deploy-prod: 
-	gcloud builds submit --config prod/rendered/cloudbuild.yaml
+	gcloud builds submit --config cloudbuild.yaml --substitutions=_ENVIRON=prod
 
+deploy-staging:
+	gcloud builds submit --config cloudbuild.yaml --substitutions=_ENVIRON=staging
