--- a/prototypes/browser-automation/Makefile
+++ b/prototypes/browser-automation/Makefile
@@ -1,4 +1,4 @@
-BACKEND_IMAGE_NAME=backend-selenium
+BACKEND_IMAGE_NAME=backend-browtomation
 
 
 build-docker:
@@ -7,5 +7,7 @@ build-docker:
 run-docker-selenium:
 	docker run $(BACKEND_IMAGE_NAME) python scripts/update_dob_selenium.py --new-dob 11/15/1992
 
+run-docker-playwright:
+	docker run $(BACKEND_IMAGE_NAME) python scripts/update_dob_playwright.py --new-dob 11/15/1992
 
 
